--- a/SearchBarDemo/MainPage.xaml
+++ b/SearchBarDemo/MainPage.xaml
@@ -7,6 +7,7 @@
         <Label Text="Search Bar Demo" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" />
         
         <SearchBar x:Name="SearchBar"
+                   Placeholder="Bosnia"
                    TextChanged="OnTextChanged"/>
                    <!--SearchButtonPressed="OnSearchButtonPressed"/>-->
         
